cmake_minimum_required(VERSION 3.28)
project(Learning_lessons_C___)

set(CMAKE_CXX_STANDARD 17)

add_executable(Learning_lessons_C___ main.cpp

        Escape_Sequences_Characters.cpp
        typeAlias.cpp
        Data_Types_Type_Conversion.cpp
        decrement_increment.h
        data_types.h
        ComparisonOperators.h
        ControlStatement.h
        Repetition_Statement.h


)
