cmake_minimum_required(VERSION 3.28)
project(Learning_lessons_C___)

set(CMAKE_CXX_STANDARD 17)

add_executable(Learning_lessons_C___ main.cpp

        decrement_increment.h
        data_types.h
        ComparisonOperators.h
        ControlStatement.h
        Repetition_Statement.h
        Scope_of_variable.h
        typeAlias.h
        Escape_Sequences_Characters.h
        Data_Types_Type_Conversion.h
        Arrays.h
        TwoDimensional_Array.h
        struct_operators.h
        Exercises.h
        pointer.h
        Car.cpp
        Car.h
        arithmetic_operators.cpp
        Array_Methods_Discussions.h
        Constructor.cpp
        Constructor.h
        Constructor.h


)
